--- a/templates/avis/index.html.twig
+++ b/templates/avis/index.html.twig
@@ -21,22 +21,20 @@
     </br >
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#FFC21B" fill-opacity="1" d="M0,0L80,48C160,96,320,192,480,197.3C640,203,800,117,960,101.3C1120,85,1280,139,1360,165.3L1440,192L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
 <div background-color="#FFC21B">
- <h1 class="text-warning"><center>Liste de nos avis</center></h1></br>     
-    <table class="table table-striped">   
-    <tr>
-        <th scope="col">Nom</th>
-        <th scope="col">Prénom</th>
-        <th scope="col">Avis</th>
-    </tr>
+ <h1 class="text-warning"><center>Liste de nos avis</center></h1></br>    
+    
     {% for avis in avis %}
+     <table class="table table-striped">
      <tr>
-        <td>{{avis.nom}}</td> 
-        <td>{{avis.prenom}}</td> 
+        <td>{{avis.nom}}</td></br> 
+        <td>{{avis.prenom}}</td> </br>
         <td>{{avis.commentaire}}</td> 
     </tr>
+    </table>
          
     {% endfor %}
     </table>
+    
     </div>
  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#FFC21B" fill-opacity="1" d="M0,0L80,48C160,96,320,192,480,197.3C640,203,800,117,960,101.3C1120,85,1280,139,1360,165.3L1440,192L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z"></path></svg>
 <h1 class="text-decoration-underline text-warning" class="text-warning"><center>Bienvenue sur notre page d'avis</center></h1></br>
