--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,21 +3,7 @@
 {% block title %}Inscription{% endblock %}
 
 {% block body %}
-<style>
- input[type=text], input[type=password]{
-        display: block;
-    width: 100%;
-    padding: 0.375rem 0.75rem;
-    font-size: 1rem;
-    line-height: 1.5;
-    color: #495057;
-    background-color: #fff;
-    background-clip: padding-box;
-    border: 1px solid #ced4da;
-    border-radius: 0.25rem;
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
- }
-</style>
+
 <div style="height:80vh">
     <div data-aos="fade-up" class="container glass-bg pb-5 pt-5" style="width:70%; margin-top: 4%">
         <div class="row">
@@ -27,24 +13,23 @@
                 
                 <div data-aos="fade-up">
                     <span style="font-size: 20px; font-weight:600; color:black">Nom</span><br>
-                    {{ form_widget(registrationForm.nom) }}
+                    {{ form_widget(registrationForm.nom, { 'attr' : { 'class': 'form-control' } }) }}
                 </div>
                 <div data-aos="fade-up">
                     <span style="font-size: 20px; font-weight:600; color:black">Prenom</span><br>
-                    {{ form_widget(registrationForm.prenom) }}
+                    {{ form_widget(registrationForm.prenom, { 'attr' : { 'class': 'form-control' } }) }}
                 </div>
                 <div data-aos="fade-up">
                     <span style="font-size: 20px; font-weight:600; color:black">Email</span><br>
-                    {{ form_widget(registrationForm.email) }}   
+                    {{ form_widget(registrationForm.email, { 'attr' : { 'class': 'form-control' } }) }}   
                 </div>
                 <div data-aos="fade-up" style="font-size: 20px; font-weight:600; color:black">
                     {{ form_widget(registrationForm.plainPassword, {
                         label: 'Password'
+                        class: 'form-control'
                     }) }} 
                 </div> <br>
-                <div data-aos="fade-up"  style="font-size: 20px; font-weight:600; color:black">
-                    {{ form_row(registrationForm.AccepterLesConditions) }}
-                </div><br>
+                
             
 
                 <button  data-aos="fade-up" class="btn btn-lg btn-primary" style="width:100%;" type="submit">Valider </button>
