--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -166,7 +166,7 @@ html {
             </li>
         {% else %}
             <li data-aos="fade-up" data-aos-delay="700" class="nav-item">
-                <a class="nav-link active"><i class="fa-solid fa-right-to-bracket"></i> Se connecter</a>
+                <a class="nav-link active" href="/login"><i class="fa-solid fa-right-to-bracket"></i> Se connecter</a>
             </li>
         {% endif %}
        
