--- a/templates/prestation/index.html.twig
+++ b/templates/prestation/index.html.twig
@@ -6,14 +6,14 @@
 <style>
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
-<h1 class="text-center" style="padding-top:280px; padding-bottom:280px; font-size:50px; font-family:arial narrow">Voici mes différentes préstations<br><span style=" font-size: 25px;"><i class="fa-solid fa-arrow-down"></i></span></h1>
+<h1 class="text-center" data-aos="fade-up" style="padding-top:280px; padding-bottom:280px; font-size:50px; font-family:arial narrow">Voici mes différentes préstations<br><span style=" font-size: 25px;" data-aos="fade-up"><i class="fa-solid fa-arrow-down"></i></span></h1>
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#049cfc" fill-opacity="1" d="M0,128L80,154.7C160,181,320,235,480,229.3C640,224,800,160,960,117.3C1120,75,1280,53,1360,42.7L1440,32L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>    
 <div style="background-color: #049cfc">
   <div class="container">
     <div style="display: grid; grid-template-columns:33% 33% 33%; grid-gap: 30px ">
       {% for prestation in prestations %}
 
-            <div class="card col-md-4" style="border-radius: 10px; background: #0684D4; width: 20vw">
+            <div class="card col-md-4" data-aos="flip-left" data-aos-duration="1500" style="border-radius: 10px; background: #0684D4; width: 20vw">
               <h2 class="text-center" style="color: white;">{{ prestation.libelle }}</h2>
               <image style=" width : 300px; margin: auto; padding-bottom: 15px; " src="assets/image_prestation/{{ prestation.image }}"></image>
               <div class="justify-content-around text-center" style="padding-bottom:10px; color:white; font-size: 20px;">
