--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -172,12 +172,9 @@ html {
             </li>
         {% else %}
             <li data-aos="fade-up" data-aos-delay="700" class="nav-item">
-<<<<<<< HEAD
-                <a class="nav-link active" href="/login"><i class="fa-solid fa-right-to-bracket"></i> Se connecter</a>
-=======
-                <a class="nav-link active" href="{{ path('app_login') }}"><i class="fa-solid fa-right-to-bracket"></i> Se connecter</a>
->>>>>>> feature
-            </li>
+
+                <a class="nav-link active" href=""><i class="fa-solid fa-right-to-bracket"></i> Se connecter</a>
+
         {% endif %}
        
     </ul>
