--- a/templates/avis/index.html.twig
+++ b/templates/avis/index.html.twig
@@ -43,22 +43,22 @@
   </div>
 </div>
  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#FFC21B" fill-opacity="1" d="M0,0L80,48C160,96,320,192,480,197.3C640,203,800,117,960,101.3C1120,85,1280,139,1360,165.3L1440,192L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z"></path></svg>
-<h1 class="text-decoration-underline text-info" class="text-info"><center>Bienvenue sur notre page d'avis</center></h1></br>
-<form method="POST" >
+<h1 class="text-decoration-underline black; color:black"><center>Bienvenue sur notre page d'avis</center></h1></br>
+<form method="POST" style="font-weight:550; color:#000 ">
 
 {{form_start(form)}}
 
 <div class="form-group">
 <label for="">Nom :</label>
-{{form_widget(form.nom)}}
+{{form_widget(form.nom, { 'attr' : { 'class': 'form-control' } })}}
 </div></br>
 <div class="form-group">
 <label for="">Prénom :</label>
-{{form_widget(form.prenom)}}
+{{form_widget(form.prenom, { 'attr' : { 'class': 'form-control' } })}}
 </div></br>
 <div class="form-group">
 <label for="">Avis :</label>
-{{form_widget(form.commentaire)}}
+{{form_widget(form.commentaire,  { 'attr' : { 'class': 'form-control' }})}}
 </div></br>
 
 {{form_end(form)}}  </form>
