--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -23,38 +23,51 @@
    <div class="container">
 <h1 class="text-decoration-underline " class="text-warning"><center>Bienvenue sur notre page de contact</center></h1></br>
 </br>
-     
+<form method="POST" style="font-weight:550; color:#000 ">
    {{form_start(form)}}</br>
 
-<div class="form-group">
-<label for="">Nom:</label>
-{{form_widget(form.nom)}}
-</div></br>
-<div class="form-group">
+<div class="row">
+  <div class="col">
+    <div class="form-group">
+      <label for="">Nom:</label>
+      {{form_widget(form.nom, { 'attr' : { 'class': 'form-control' } })}}
+    </div></br>
+  </div>
+  <div class="col">
+  <div class="form-group">
 <label for="">Prénom:</label>
-{{form_widget(form.prenom)}}
+{{form_widget(form.prenom,{ 'attr' : { 'class': 'form-control' } })}}
 </div></br>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col">
 <div class="form-group">
 <label for="">Adresse Email:</label>
-{{form_widget(form.email)}}
+{{form_widget(form.email,{ 'attr' : { 'class': 'form-control' } })}}
 </div></br>
+</div>
+<div class="col">
 <div class="form-group">
 <label for="">Numéro de téléphone:</label>
-{{form_widget(form.telephone)}}
+{{form_widget(form.telephone,{ 'attr' : { 'class': 'form-control' } })}}
 </div></br>
+</div>
+</div>
 <div class="form-group">
 <label for="">Adresse:</label>
-{{form_widget(form.adresse)}}
+{{form_widget(form.adresse,{ 'attr' : { 'class': 'form-control' } })}}
 </div></br>
 <div class="form-group">
 <label for="">Sujet:</label>
-{{form_widget(form.sujet)}}
+{{form_widget(form.sujet,{ 'attr' : { 'class': 'form-control' } })}}
 </div></br>
 <div class="form-group">
 <label for="">Message:</label>
-{{form_widget(form.message)}}
+{{form_widget(form.message,{ 'attr' : { 'class': 'form-control' } })}}
 </div></br>
-
+</form>
 {{form_end(form)}}
     
     </div>
