--- a/templates/avis/index.html.twig
+++ b/templates/avis/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AvisController!{% endblock %}
+{% block title %}Page d'avis{% endblock %}
 {% block body %}
 
 
@@ -10,7 +10,7 @@
       <h1 style="font-size:50px" class="pt-5">
       <strong>PAGE D'AVIS</strong></h1>
       <p class="text-primary" style="font-weight:500">Veuillez trouver les avis laissés par les clients sur le site</p>
-      <button type="button" class="btn btn-primary">Voir les avis</button>
+      <button type="button" class="btn btn-primary" onclick="location.href ='#avis'">Voir les avis</button>
     </div>
     <div class="col text-center">
       <img style="width:250px;" src="assets/coche.png"> <!-- Changer lien de l'image -->
@@ -19,7 +19,7 @@
 </div>
 <br>
 <svg xmlns="http://www.w3.org/2000/svg" style="margin-top:200px" viewBox="0 0 1440 320"><path fill="#FFC21B" fill-opacity="1" d="M0,0L80,48C160,96,320,192,480,197.3C640,203,800,117,960,101.3C1120,85,1280,139,1360,165.3L1440,192L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
-<div style="background-color:#FFC21B">
+<div id="avis" style="background-color:#FFC21B">
   <div class="container">
     <h1 ><center>Liste de nos avis</center></h1></br> 
       <div style="display:grid; grid-template-columns: 50% 50%; grid-gap: 20px" id="avis">
