--- a/templates/presentation/index.html.twig
+++ b/templates/presentation/index.html.twig
@@ -12,15 +12,16 @@
       <h1 style="font-size:50px" class="pt-5">
       <strong>PAGE DE PRÉSENTATION</strong></h1>
       <p class="text-primary" style="font-weight:500">Une présentation du tonnerre !</p>
-      <button type="button" class="btn btn-primary">Voir ma présentation</button>
+      <button type="button" class="btn btn-primary" onclick="location.href ='#presentation'">Voir ma présentation</button>
     </div>
     <div class="col text-center" style=" display: block; padding-top: auto;" data-aos="fade-up" data-aos-delay="400">
       <img style="width: 380px;" src="assets/men.png"> <!-- Changer lien de l'image -->
     </div>
   </div>
 </div>
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fc0404" fill-opacity="1" d="M0,128L80,154.7C160,181,320,235,480,229.3C640,224,800,160,960,117.3C1120,75,1280,53,1360,42.7L1440,32L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>    <div style="background-color: #fc0404">
-    <div class="container">
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fc0404" fill-opacity="1" d="M0,128L80,154.7C160,181,320,235,480,229.3C640,224,800,160,960,117.3C1120,75,1280,53,1360,42.7L1440,32L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
+<div id="presentation" style="background-color: #fc0404">
+    <div class="container" >
     <h2 class="text-center" data-aos="fade-down-right" data-aos-duration="750"style="padding-top:30px; padding-bottom: 30px; font-size: 40px; font-family:arial narrow; color:white">{{ presentation[0].titre }}</h2>
     <div class="row align-items-center justify-content-around text-center" style="padding-top: 30px">
     <div class="col">
