--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -25,8 +25,7 @@
                 </div>
                 <div data-aos="fade-up" style="font-size: 20px; font-weight:600; color:black">
                     {{ form_widget(registrationForm.plainPassword, {
-                        label: 'Password',
-                        class: 'form-control'
+                        label: 'Password'
                     }) }} 
                 </div> <br>
                 
