--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         <link rel="stylesheet" href="../../../assets/bootstrap.min.css">
@@ -157,7 +157,7 @@ html {
             <a class="nav-link active" href="{{ path('app_avis') }}"><i class="fa-solid fa-star"></i> Avis</a>
         </li>
         <li data-aos="fade-up" data-aos-delay="500" class="nav-item">
-            <a class="nav-link active" href="/{{ path('app_contact') }}"><i class="fa-solid fa-phone"></i> Contact</a>
+            <a class="nav-link active" href="{{ path('app_contact') }}"><i class="fa-solid fa-phone"></i> Contact</a>
         </li>
         <li data-aos="fade-up" data-aos-delay="600" class="nav-item">
             <a class="nav-link active">|</a>
