--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -188,7 +188,7 @@ html {
            
             <p class="mb-0">Made with ❤️ by Colomeon for 3Cables.</p>
             <p class="mb-0"></p>
-            <p class="mb-0"><a>About</a> - <a>Avis</a> - <a>Contact</a></p>
+            <p class="mb-0"><a>About</a> - <a>Avis</a> - <a>Contact</a> - <a class="active" style="color:#FFF !important" href="{{ path('app_mentions') }}">Mentions Légales</a></p>
             <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
             <script src="assets/bootstrap/js/bootstrap.min.js"></script>
